# MADS-EAI-Exam2

./: README.md  pyproject.toml  requirements.txt
src/model/: predictor.pkl
